<?php

namespace Merdiano\Payment\Gateways;

class AltynAsyr extends AbstractGateway
{
    /**
     * Gateway code.
     *
     * @var string
     */
    protected $code = 'altyn-asyr';


}
