<?php

namespace Merdanio\GatewayTM\Payment\Gateways;

use Merdanio\GatewayTM\Payment\Exceptions\GatewayAddressException;
use Merdanio\GatewayTM\Payment\Exceptions\GatewayCodeException;

abstract class AbstractGateway
{
    /**
     * Payment Gateway code.
     *
     * @var string
     */
    protected $code;

    /**
     * Base Constructor
     *
     * @param string $order_id
     */
    public function __construct(protected $order_id){}
    /**
     * Returns shipping method carrier code.
     *
     * @return string
     */
    public function getCode() : string
    {
        if (empty($this->code)) {
            throw new GatewayCodeException('Gateway code should be initialized.');
        }

        return $this->code;
    }

    /**
     * Returns gateway title.
     *
     * @return string
     */
    public function getTitle() : string
    {
        return $this->getConfigData('title');
    }

    /**
     * Payment order id
     *
     * @return string
     */
    public function getOrderId() : string
    {
        return $this->order_id;
    }

    /**
     * Retrieve information from gateway configuration.
     *
     * @param  string  $field
     * @return mixed
     */
    public function getConfigData(string $field):mixed
    {
        return config('gateway.clients.' . $this->getCode() . '.' . $field);
    }

    /**
     * Payment order registration address
     *
     * @return string
     * @throws GatewayAddressException
     * @throws GatewayCodeException
     */
    public function getRegistrationURL() : string
    {
        if( $order_uri = config('gateway.clients.' . $this->getCode() . '.order_uri' )){
            return $this->apiURL().$order_uri;
        }

        throw new GatewayAddressException();
    }

    /**
     * Payment order status address
     *
     * @return string
     * @throws GatewayAddressException
     * @throws GatewayCodeException
     */
    public function getStatusURL() : string
    {
        if( $status_uri = config('gateway.clients.' . $this->getCode() . '.status_uri' )){
            return $this->apiURL().$status_uri;
        }

        throw new GatewayAddressException();
    }

    /**
     * Payment service API address
     *
     * @return string
     * @throws GatewayAddressException
     * @throws GatewayCodeException
     */
    public function apiURL() : string
    {
        if($api = config('gateway.clients.' . $this->getCode() . '.api' )){
            return $api;
        }

        throw new GatewayAddressException();
    }

    /**
     * Sets Payment amount (tenge)
     *
     * @param int $amount
     */
    public function setAmount(int $amount) : void
    {
        $this->amount = $amount;
    }

    /**
     * Sets order description
     *
     * @param string $description
     */
    public function setDescription(string $description) : void
    {
        $this->description = $description;
    }

    /**
     * Params to be sent to gateway, to register order
     *
     * @param string $orderId
     * @return array[]
     */
    public function orderParams(string $success_route, string $fail_route) : array
    {
        return [
            'userName' => $this->getConfigData('user'),
            'password' => $this->getConfigData('password'),
            'sessionTimeoutSecs' => config('gateway.http_client.timeout'),
            'orderNumber' =>$this->order_id,
            'currency' => 934,
            'language' => 'ru',
            'description'=> $this->description,
            'amount' => $this->amount,// amount w kopeykah
            'returnUrl' => route($success_route,['orderId' => $this->order_id]),
            'failUrl' => route($fail_route,['orderId'=>$this->order_id])
        ];
    }

    /**
     * Params to be sent to gateway, to retrieve payment status
     * @param string $orderId
     * @return array[]
     */
    public function statusParams(string $orderId) : array
    {
        return [
            'form_params' => [
                'userName' => $this->getConfigData('user'),
                'password' => $this->getConfigData('password'),
                'orderId' => $orderId,
            ]
        ];
    }

    /**
     * Convert order registration response to RegistrationResult
     * @param array $data
     * @return IRegistrationResult
     */
    public function registrationResult(array $data): IRegistrationResult
    {
        $result = new RegistrationResult(isset($data['orderId']) && isset($data['formUrl']));

        if($result->isSuccessful()){
            $result->setOrderId($data['orderId']);
            $result->setFormUrl($data['formUrl']);
        }
        elseif(isset($data['errorMessage'])){
            $result->setErrorMessage($data['errorMessage']);
        }

        return $result;
    }

    public function paymentStatus(array $data) : IPaymentStatus
    {
        $status = $data['ErrorCode'] == 0 && isset($data['OrderStatus']) && $data['OrderStatus'] == 2;

        $result = new PaymentStatus($status,$data['ErrorMessage']);

        return $result;
    }
}
