<?php

namespace Merdanio\GatewayTM\Payment\Gateways;

class Senagat extends AbstractGateway
{
    /**
     * Gateway code.
     *
     * @var string
     */
    protected $code = 'senagat';

}
